# snipper-clipper

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  structs.rs
src/utils/: connections.rs  constants.rs  error.rs  mod.rs
