[package]
name = "snipclip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
uuid = {version="1.2.2", features=["v4","serde"]}
serde_json = "1.0.87"
serde = {version ="1.0.147", features = ["derive"]}
xdg = "2.4.1"
